Retry when refreshing fails or times out

--- a/constructr-machine/src/main/resources/reference.conf
+++ b/constructr-machine/src/main/resources/reference.conf
@@ -3,6 +3,7 @@ constructr.machine {
   max-nr-of-seed-nodes   = 0          // Any nonpositive value means Int.MaxValue
   nr-of-add-self-retries = 2          // Nr. of tries are nr. of retries + 1
   refresh-interval       = 30 seconds // TTL is refresh-interval * ttl-factor
+  nr-of-refresh-retries = 5 // TODO document how exactly this should relate to the other settings
   retry-get-nodes-delay  = 3 seconds  // If lock couldn't be acquired, give other node some time to add self
   ttl-factor             = 1.5        // Must be greater than 1 + (coordination-timeout * (1 + coordination-retries) / refresh-interval)!
 }
